--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,7 @@
         <title>Tavern</title>
 
         <!--Favicon-->
-        <link rel="icon" type="image/png" href="Source\Logo_Color.png">
+        <link rel="icon" type="image/png" href="tavern/Logo_Color.png">
         
         <!--CSS-->
         <link rel="stylesheet" href="Responsive_Style.css">
@@ -23,8 +23,8 @@
             <img src="source/Logo_Gray.png" alt="Logo" class="logo">
             <div class="search-area">
                 <input type="text" class="search-box" placeholder="Search for your Magic!">
-                <img src="Source/Purchase.png" alt="Purchase" class="icon" title="My Cart">
-                <img src="Source/Profile.png" alt="Profile" class="icon" title="Profile">
+                <img src="Tavern/Purchase.png" alt="Purchase" class="icon" title="My Cart">
+                <img src="Tavern/Profile.png" alt="Profile" class="icon" title="Profile">
             </div>
         </div>
 
@@ -39,7 +39,7 @@
 
         <!--Imagem-->
         <div class="image-container">
-            <img src="Source/imagem_1.png">
+            <img src="Tavern/imagem_1.png">
             <div class="text-box">
                 <h1>What's New?</h1>
                 <p>Discover the latest Lord of the Rings card set now!</p>
@@ -58,7 +58,7 @@
 
             <!--Card #1-->
             <div class="box">
-                <img src="Source/card_1.png">
+                <img src="Tavern/card_1.png">
                 <p class="text-top">The One Ring 1 of 1</p>
                 <p class="text-bottom">$15.00</p>
                 <button class="button-card">Add to Cart</button>
@@ -66,7 +66,7 @@
 
             <!--Card #2-->
             <div class="box">
-                <img src="Source/card_2.png">
+                <img src="Tavern/card_2.png">
                 <p class="text-top">Bridge of Khazad-dum</p>
                 <p class="text-bottom">$9.00</p>
                 <button class="button-card">Add to Cart</button>
@@ -74,7 +74,7 @@
 
             <!--Card #3-->
             <div class="box">
-                <img src="Source/card_3.png">
+                <img src="Tavern/card_3.png">
                 <p class="text-top">Mount Doom</p>
                 <p class="text-bottom">$7.00</p>
                 <button class="button-card">Add to Cart</button>
@@ -82,7 +82,7 @@
 
             <!--Card #4-->
             <div class="box">
-                <img src="Source/card_4.png">
+                <img src="Tavern/card_4.png">
                 <p class="text-top">Gandalf the Grey</p>
                 <p class="text-bottom">$11.00</p>
                 <button class="button-card">Add to Cart</button>
@@ -92,7 +92,7 @@
 
         <!--Pagamento-->
         <div class="pay-bar">
-            <img src="Source/pay.png" class="pay-image">
+            <img src="Tavern/pay.png" class="pay-image">
         </div>
 
         <div class="footer-bar">
